Adde more tests and comments to Java files